# MineCraft_crafter

./: .abacus.donotdelete  .coverage  .eslintrc.cjs  .gitignore  AGENT.md  Makefile  README.md  STARTUP_WINDOWS.md  docker-compose.yml  docs_runbook.md  guide.html  package-lock.json  package.json  start.bat
bot/: config.json  package.json  (+3 more)
minecraft_autonomous_builder/: docker-compose.yml  docs_runbook.md  guide.html  pyproject.toml  requirements.txt
minecraft_autonomous_builder/bot/: config.example.json
minecraft_autonomous_builder/bot/src/: inventory.ts  navigation.ts  placement.ts  protocol.ts  world_state.ts
minecraft_autonomous_builder/configs/: app.yaml  block_aliases_1_20.yaml  model_routing.yaml  redstone_components.yaml
minecraft_autonomous_builder/configs/project_builder_defaults/: city.yaml  mansion.yaml  plane.yaml
minecraft_autonomous_builder/prompts/: architect_system.md  scale_reference_table.md
minecraft_autonomous_builder/schemas/: blueprint_module.schema.json  material_manifest.schema.json  vision_diff.schema.json
minecraft_autonomous_builder/scripts/: run_local_stack.sh  seed_prompts.py
minecraft_autonomous_builder/src/api/: app.py  routes_builds.py  routes_health.py
minecraft_autonomous_builder/src/common/: errors.py  telemetry.py
minecraft_autonomous_builder/src/execution/: batch_builder.py  preflight.py  worldedit_adapter.py
minecraft_autonomous_builder/src/mempalace/: __init__.py  accessor.py  spatial_index.py
minecraft_autonomous_builder/src/orchestrator/: convergence_gate.py  intent_parser.py  model_runtime.py  service.py
(+85 files in other folders)
